# qr_driver

./: .gitignore  CMakeLists.txt  README.md  compile_proto.sh  package.xml
config/: dragon.proto  robot_config.xml  robot_description.xml  robot_specification.xml
examples/config/: test_controller.yaml  test_controller_plugins.xml
examples/launch/: test_controller.launch
examples/src/: qr_driver_test.cpp  qr_driver_test.h
include/apps/: ros_robothw.h  ros_wrapper.h
include/apps/hw_unit/: leg_node.h
include/foundation/: auto_instanceor.h  cfg_reader.h  label.h  utf.h
include/foundation/internal/: mii_config.h
include/middleware/: middleware.cpp  middleware.h  ros_robothw.cpp  ros_robothw.h  ros_wrapper.cpp  ros_wrapper.h
include/middleware/hardware/: encoder.h  hw_group.h  hw_manager.h  hw_unit.h  joint.h  joint_manager.h  joint_manager_base.h  leg.h  leg_node.h  motor.h  touchdown.h
include/middleware/propagate/: README.md  com.h  pcan.h  propagate.h  propagate_manager.h
include/middleware/propagate/proto/: dragon.pb.cc
include/middleware/util/: component.h  composite.h  composite2.h  log.h  name_dict.h  noncopyable.h  parser.cpp  parser.h  qr_protocol.h  resource_manager.h
include/middleware/util/proto/: dragon.pb.cc  dragon.pb.h
include/repository/: registry.h
include/repository/control_toolbox/: leg_pid.h  pid.h  trajectoryfollower.h
include/repository/estimator/: touchdown_estimator.h
include/repository/resource/: force_sensor.h  imu_sensor.h  joint.h  joint_manager.h  motor.h  power.h
include/system/foundation/: auto_instanceor.h  cfg_reader.h  label.h  utf.h
include/system/label/: label.h
include/system/platform/: hw_manager.h  master.h  resource_manager.h
include/system/platform/hw_unit/: hw_unit.h  leg_node.h
include/system/platform/internal/: resource_manager.h
include/system/platform/propagate/: README.md  arm_pcan.h  imu_usb.h  motor_pcan.h  pcan.h  pcan_fake.h  propagate.h  propagate_manager.h  usb.h
include/system/platform/protocol/: qr_protocol.h  user.h
include/system/platform/protocol/proto/: dragon.pb.cc
include/system/platform/sw_node/: imu_node.h  leg_node.h  power_node.h  sw_node.h  sw_node_manager.h
include/system/platform/thread/: threadpool.h
include/system/resources/: joint.h  joint_manager.h  touchdown.h
include/system/robot/: mii_robot.h
include/system/thread/: threadpool.h
include/system/utils/: auto_instanceor.h  cfg_reader.h  composite.h  composite2.h  log.h  noncopyable.h  parser.h  resource_manager.h  utf.h
launch/: dragon_driver.launch  qr_driver.launch
src/: main.cpp  middleware.cpp  ros_wrapper.cpp
src/apps/: ros_robothw.cpp  ros_wrapper.cpp
src/apps/hw_unit/: leg_node.cpp
src/foundation/: auto_instanceor.cpp  cfg_reader.cpp  label.cpp
src/foundation/internal/: mii_config.cpp
src/hardware/: encoder.cpp  hw_group.cpp  hw_unit.cpp  joint.cpp  leg.cpp  motor.cpp
src/middleware/: middleware.cpp  ros_robothw.cpp  ros_wrapper.cpp
src/middleware/hardware/: hw_manager.cpp  hw_unit.cpp  joint.cpp  joint_manager.cpp  leg_node.cpp  touchdown.cpp
src/middleware/propagate/: pcan.cpp  propagate.cpp  propagate_manager.cpp
src/middleware/util/: parser.cpp
src/propagate/: com.cpp  pcan.cpp  propagate.cpp
src/repository/: registry.cpp
src/repository/control_toolbox/: leg_pid.cpp  pid.cpp  trajectoryfollower.cpp
src/repository/estimator/: SimpleTDEstimator.cpp  touchdown_estimator.cpp
src/repository/resource/: force_sensor.cpp  imu_sensor.cpp  joint.cpp  joint_manager.cpp  motor.cpp  power.cpp
src/system/foundation/: auto_instanceor.cpp  cfg_reader.cpp  label.cpp
src/system/label/: label.cpp
src/system/platform/: hw_manager.cpp  master.cpp  propagate_manager.cpp
src/system/platform/hw_unit/: hw_unit.cpp  leg_node.cpp
src/system/platform/propagate/: arm_pcan.cpp  imu_usb.cpp  motor_pcan.cpp  pcan.cpp  pcan_fake.cpp  propagate.cpp  propagate_manager.cpp  usb.cpp
src/system/platform/sw_node/: imu_node.cpp  leg_node.cpp  power_node.cpp  sw_node.cpp  sw_node_manager.cpp
src/system/platform/thread/: threadpool.cpp
src/system/resources/: joint.cpp  joint_manager.cpp  touchdown.cpp
src/system/robot/: mii_robot.cpp
src/system/thread/: threadpool.cpp
src/system/utils/: auto_instanceor.cpp  cfg_reader.cpp  parser.cpp  trajectoryfollower.cpp
src/util/: parser.cpp
test/: main.cpp
